fixed background position on mobile

--- a/src/Components/Burger/Burger.css
+++ b/src/Components/Burger/Burger.css
@@ -8,9 +8,7 @@
   height: 35px;
   width: 40px;
   cursor: pointer;
-  margin: 10px;
-  border-radius: 5px;
-  padding: 3px;
+  padding: 10px;
 }
 
 .burger_line {
